# llmmsg

./: .agent-name  .agent-name-ca  .agent-name-cc  .gitignore  .gitpush-pre.sh  AGENTS.md  CLAUDE.md  ECOSYSTEM.md  LICENSE  claudecode-recommendations.md  codex-recommendations.md  llm-message-guide.md  recommendations.md  tiny-llmmsg.md  unified-recommendations.md
codex-llmmsg-app/: README.md  bridge-state.sqlite  bridge.mjs  cf-thread-map.mjs  package-lock.json  package.json  pnpm-lock.yaml  registrations.json  registrations.json.bak.20260425-051148  rpc-client.mjs  set-thread-cwd.mjs  start-app-server.sh
config-templates/: claude-json-mcp-entry.json  codex-config-mcp-entry.toml  site.conf.lezama  site.conf.whey
docs/: changelog-channels.md  channels-for-elazar.md  channels-guide.md  channels-reference.md  codex-mcp-local-servers-reference.md  llmmsg-deep-research-report.md  setup-channels.md  setup-guide.md
gtk-chat/: README.md  pyproject.toml
gtk-chat/llmmsg_chat/: cli.py  gui.py  hub_client.py
launchers/: ccs.sh  ccsn.sh  cf.sh  cfn.sh
llmmsg-channel/: channel.mjs  hub.mjs  package-lock.json  package.json  pnpm-lock.yaml
scripts/: daily-comms-audit.sh  init-db.sh  llmmsg-cli.py  setup.sh  test-site-suffix.sh
services/: codex-app-server.service  llmmsg-bridge.service  llmmsg-hub.service
sqlite-report/: 2026-04-07-llmmsg-sqlite-report.txt  2026-04-08-llmmsg-sqlite-report.txt  2026-04-11-llmmsg-sqlite-report.txt  2026-04-15-llmmsg-sqlite-report.txt  2026-04-20-llmmsg-sqlite-report.txt  2026-04-22-llmmsg-sqlite-report.txt  (+2 more)
tui/: llmmsg-chat.mjs  (+2 more)
(+1 files in other folders)
