[project]
name = "llmmsg-chat"
version = "0.4.2"
description = "GTK4 + libadwaita client for llmmsg-channel"
requires-python = ">=3.11"
dependencies = []
authors = [{ name = "Elazar Pimentel" }]

[project.scripts]
llmmsg-chat = "llmmsg_chat.gui:main"
llmmsg-chat-cli = "llmmsg_chat.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llmmsg_chat*"]
